<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_decovery"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom"
        android:title="@string/decovery"/>

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/_case"
        app:showAsAction="ifRoom"
        android:title="@string/my_schedule"/>
    <item
        android:id="@+id/navigation_save"
        android:icon="@drawable/alert"
        app:showAsAction="ifRoom"
        android:title="@string/save"/>
    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/notification"
        app:showAsAction="ifRoom"
        android:title="@string/notification"/>
    <item
        android:id="@+id/navigation_other"
        android:icon="@drawable/other"
        app:showAsAction="ifRoom"
        android:title="@string/other"/>
</menu>