<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    app:layoutDescription="@xml/main_animation">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/wall_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp">
            <ImageView
                android:id="@+id/schedule_icon"
                android:layout_width="60dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/weather_icon"
                android:layout_marginTop="16dp"
                android:src="@drawable/route"
                android:padding="18dp"
                android:background="@drawable/background_circle_for_75dp"
                android:clickable="true"
                android:focusable="true"
                />
            <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="60dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="@id/schedule_icon"
                app:layout_constraintStart_toEndOf="@id/schedule_icon"
                app:layout_constraintEnd_toStartOf="@id/hotel_icon"
                android:padding="18dp"
                android:src="@drawable/weather"
                android:background="@drawable/background_circle_for_75dp_yellow"
                android:clickable="true"
                android:focusable="true"
                />
            <ImageView
                android:id="@+id/hotel_icon"
                android:layout_width="60dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="@id/schedule_icon"
                app:layout_constraintStart_toEndOf="@id/weather_icon"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="18dp"
                android:src="@drawable/building"
                android:tint="@android:color/white"
                android:background="@drawable/background_circle_for_75dp_green"
                android:clickable="true"
                android:focusable="true"
                />
            <TextView
                android:id="@+id/schedule_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/schedule_icon"
                app:layout_constraintStart_toStartOf="@id/schedule_icon"
                app:layout_constraintEnd_toEndOf="@id/schedule_icon"
                android:text="@string/schedule"
                android:layout_marginTop="8dp"
                android:textColor="@color/DarkerBlack"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/weather_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/schedule_text"
                app:layout_constraintStart_toStartOf="@id/weather_icon"
                app:layout_constraintEnd_toEndOf="@id/weather_icon"
                android:text="@string/weather"
                android:textColor="@color/DarkerBlack"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/hotel_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/schedule_text"
                app:layout_constraintStart_toStartOf="@id/hotel_icon"
                app:layout_constraintEnd_toEndOf="@id/hotel_icon"
                android:text="@string/hotel"
                android:textColor="@color/DarkerBlack"
                android:textStyle="bold"
                />

            <View
                android:id="@+id/make_plan"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/background_make_schedule"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/schedule_text" />

            <ImageView
                android:id="@+id/icon_make_plan"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="@id/make_plan"
                app:layout_constraintEnd_toStartOf="@id/text_make_plan"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:src="@drawable/add_stroke"
                app:layout_constraintTop_toTopOf="@id/make_plan"
                app:layout_constraintBottom_toBottomOf="@id/make_plan"
                android:padding="10dp"
                android:tint="@android:color/white"/>
            <TextView
                android:id="@+id/text_make_plan"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="@id/icon_make_plan"
                app:layout_constraintEnd_toEndOf="@id/make_plan"
                app:layout_constraintStart_toEndOf="@id/icon_make_plan"
                android:text="@string/make_plan"
                android:textAllCaps="true"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/section_nearby"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="24dp"
                android:paddingEnd="150dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/section_nearby"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/make_plan"
                android:layout_marginTop="24dp"
                />
            <TextView
                android:id="@+id/nearby_all_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="@id/section_nearby"
                app:layout_constraintBottom_toBottomOf="@id/section_nearby"
                app:layout_constraintEnd_toEndOf="@id/section_nearby"
                android:textColor="#888"
                android:textSize="14sp"
                android:text="@string/all"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginEnd="16dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/nearby_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/section_nearby"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/item_place"
                tools:orientation="horizontal"
                tools:layoutManager="LinearLayoutManager"
                android:clipToPadding="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:overScrollMode="never"
                />
            <TextView
                android:id="@+id/section_popular"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="24dp"
                android:paddingEnd="150dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/section_nearby"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/nearby_recycler_view"
                android:layout_marginTop="16dp"
                />
            <TextView
                android:id="@+id/popular_all_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="@id/section_popular"
                app:layout_constraintBottom_toBottomOf="@id/section_popular"
                app:layout_constraintEnd_toEndOf="@id/section_nearby"
                android:textColor="#888"
                android:textSize="14sp"
                android:text="@string/all"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginEnd="16dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popular_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/section_popular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/item_place"
                tools:orientation="horizontal"
                tools:layoutManager="LinearLayoutManager"
                android:clipToPadding="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:overScrollMode="never"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <ImageView
        android:id="@+id/wall_image"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/wall"
        android:scaleType="centerCrop"/>
    <View
        android:id="@+id/wall_filter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/wall_image"
        app:layout_constraintEnd_toEndOf="@id/wall_image"
        app:layout_constraintTop_toTopOf="@id/wall_image"
        app:layout_constraintBottom_toBottomOf="@id/wall_image"
        android:background="#77007AFF"
        android:alpha="0"/>
    <View
        android:id="@+id/gradient_line"
        android:layout_width="0dp"
        android:layout_height="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/scroll_view"
        android:background="@drawable/gradient_shadow"
        android:alpha="0"/>
    <FrameLayout
        android:id="@+id/status_parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <View
            android:id="@+id/status_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
    </FrameLayout>
    <View
        android:id="@+id/search_panel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/status_parent"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/FlatWhite"
        android:textSize="24sp"
        app:layout_collapseMode="pin"
        android:gravity="center_vertical"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/background_search_panel"
        android:focusable="true"
        android:clickable="true"/>
    <View
        android:id="@+id/bottom_search_view"
        android:layout_width="0dp"
        android:layout_height="16dp"
        app:layout_constraintTop_toBottomOf="@id/search_panel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"/>
    <ImageView
        android:id="@+id/search_icon"
        android:layout_width="40dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/search_panel"
        app:layout_constraintBottom_toBottomOf="@id/search_panel"
        app:layout_constraintStart_toStartOf="@id/search_panel"
        app:layout_constraintEnd_toStartOf="@id/search_text_view"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:src="@drawable/search_thin"
        android:tint="@android:color/black"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />
    <TextView
        android:id="@+id/search_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/search_panel"
        app:layout_constraintBottom_toBottomOf="@id/search_panel"
        app:layout_constraintEnd_toEndOf="@id/search_panel"
        app:layout_constraintStart_toEndOf="@id/search_icon"
        android:text="@string/search_hint"
        android:textSize="14sp"
        android:textColor="#DD000000"
        android:textStyle="bold"
        android:gravity="center"/>
</androidx.constraintlayout.motion.widget.MotionLayout>